--- a/src/app/components/Toggle/Toggle.module.scss
+++ b/src/app/components/Toggle/Toggle.module.scss
@@ -1,11 +1,14 @@
+.toggleContainer {
+  display: inline-block;
+}
+
 .SwitchRoot {
   all: unset;
   width: 48px;
-  height: 28px;
+  height: 25px;
   background-color: var(--purple);
   border-radius: 9999px;
   position: relative;
-  box-shadow: 0 2px 10px black;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   margin: 0 16px;
 }
