--- a/src/app/components/QuestionButton/QuestionButton.module.scss
+++ b/src/app/components/QuestionButton/QuestionButton.module.scss
@@ -1,7 +1,7 @@
 .buttonContainer {
   width: 564px;
   height: 96px;
-  background: var(--navy);
+  background: var(--background-button);
   border-radius: 24px;
   box-shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
   display: flex;
