--- a/src/app/components/Quiz/Quiz.module.scss
+++ b/src/app/components/Quiz/Quiz.module.scss
@@ -54,3 +54,15 @@
     font-weight: 500;
   }
 }
+
+.noAnswer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 150%;
+  color: var(--light-grey);
+  margin-top: 32px;
+  gap: 8px;
+}
