--- a/src/app/components/Quiz/Quiz.module.scss
+++ b/src/app/components/Quiz/Quiz.module.scss
@@ -66,3 +66,42 @@
   margin-top: 32px;
   gap: 8px;
 }
+
+.completedRightContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+  width: 564px;
+}
+
+.scoreContainer {
+  width: 100%;
+  height: 388px;
+  background-color: var(--navy);
+  box-shadow: 0px 16px 40px 0px rgba(49, 62, 81, 0.14);
+  border-radius: 24px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 48px;
+  gap: 40px;
+}
+
+.totalRightAnswers {
+  font-size: 144px;
+  font-weight: 500;
+  line-height: 100%;
+  display: flex;
+  gap: 16px;
+  flex-direction: column;
+}
+
+.totalQuestions {
+  font-size: 24px;
+  line-height: 150%;
+  color: var(--light-bluish);
+}
+
+.buttonQuiz {
+  margin-top: 32px;
+}
