handle dark and light vars

--- a/src/app/components/Button/Button.module.scss
+++ b/src/app/components/Button/Button.module.scss
@@ -8,6 +8,7 @@
   font-size: 28px;
   font-style: normal;
   font-weight: 500;
+  color: var(--pure-white);
 
   &:hover {
     background: linear-gradient(
