--- a/src/app/components/ProgressBar/ProgressBar.module.scss
+++ b/src/app/components/ProgressBar/ProgressBar.module.scss
@@ -3,7 +3,7 @@
   height: 16px;
   padding: 4px;
   border-radius: 999px;
-  background-color: var(--navy);
+  background-color: var(--progress-background);
 }
 
 .progressBarFill {
