--- a/src/app/components/Badge/Badge.module.scss
+++ b/src/app/components/Badge/Badge.module.scss
@@ -5,6 +5,12 @@
   height: 56px;
   background-repeat: no-repeat;
   background-position: center;
+
+  @include mq(sm) {
+    width: 40px;
+    height: 40px;
+    border-radius: 5px;
+  }
 }
 
 .selectedSubject {
@@ -14,4 +20,9 @@
   font-size: 28px;
   font-weight: 500;
   line-height: 100%;
+
+  @include mq(sm) {
+    font-size: 18px;
+    gap: 16px;
+  }
 }
