--- a/src/app/components/Quiz/Quiz.module.scss
+++ b/src/app/components/Quiz/Quiz.module.scss
@@ -12,6 +12,10 @@
     width: 100%;
     padding: 0 62px;
   }
+
+  @include mq(sm) {
+    padding: 0 24px;
+  }
 }
 
 .descriptionsContainer {
@@ -27,6 +31,10 @@
 
   @include mq(md) {
     padding-top: 64px;
+  }
+
+  @include mq(sm) {
+    padding-top: 40px;
   }
 }
 
@@ -48,6 +56,10 @@
     width: 100%;
     padding-bottom: 40px;
   }
+
+  @include mq(sm) {
+    padding-bottom: 24px;
+  }
 }
 
 .textDescription {
@@ -56,12 +68,20 @@
   font-weight: 400;
   line-height: 150%;
   color: var(--left-subtitle);
+
+  @include mq(sm) {
+    font-size: 14px;
+  }
 }
 
 .question {
   font-size: 36px;
   font-weight: 500;
   line-height: 120%;
+
+  @include mq(sm) {
+    font-size: 20px;
+  }
 }
 
 .noSubjectPadding {
@@ -86,6 +106,11 @@
   & > p:last-child {
     font-weight: 500;
   }
+
+  @include mq(sm) {
+    font-size: 40px;
+    line-height: 100%;
+  }
 }
 
 .noAnswer {
@@ -108,7 +133,7 @@
 
   @include mq(md) {
     width: 100%;
-    padding-top: 64px;
+    padding-top: 40px;
   }
 }
 
